--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Felix+Titling:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -11,10 +13,26 @@
 }
 
 body {
-  font-family: Inter;
+  background-color: #f5f5f5;
+  font-family: 'Felix Titling', sans-serif;
 }
 
 @layer utilities {
+  .bg-gradient-green {
+    background: linear-gradient(to top, rgba(29, 93, 67, 0.9), transparent);
+  }
+  .bg-gradient-gold {
+    background: linear-gradient(to top, rgba(210, 174, 109, 0.9), transparent);
+  }
+
+  .bg-gradient-yellow {
+    background: linear-gradient(
+      to top,
+      rgba(210, 174, 109, 1) 0%,
+      rgba(210, 174, 109, 0.6) 100%
+    );
+  }
+
   .btn_white {
     @apply border-white bg-white px-8 py-3 text-green-50;
   }
