--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,7 @@
 }
 
 body {
+  padding: 4px;
   background-color: #f5f5f5;
   font-family: 'Felix Titling', sans-serif;
 }
@@ -171,13 +172,11 @@ body {
   }
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
 .hide-scrollbar::-webkit-scrollbar {
   display: none;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
 .hide-scrollbar {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
