--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,7 @@ body {
 body {
   padding: 4px;
   background-color: #f5f5f5;
-  font-family: 'Felix Titling', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 @layer utilities {
